Add new version of the scala grammar